BB-6633: Mobile: FrontStore > Main Page > Add to Shopping List dropdown button is larger than required on Product view - fixed Add to Shopping List dropdown button on mobile

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/featured-product/featured-product.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/featured-product/featured-product.scss
@@ -35,12 +35,5 @@
 
             text-overflow: ellipsis;
         }
-
-        & #add-to-shopping-list > a.dropdown-toggle,
-        & #add-to-shopping-list > span.dropdown-toggle {
-            width: 20px;
-
-            line-height: 42px;
-        }
     }
 }
